Aggiunte nuove classi "Exception" per i metodi dei componenti, aggiunta dei commenti al codice, modifica del metodo solveNextCard() della classe "GameState"